--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div id="challenge-4"></div>
     <div id="challenge-5"></div>
     <div id="challenge-6"></div>
+    <div id="challenge-7"></div>
     <script src="main.js"></script>
 </body>
 </html>
