--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div id="challenge-5"></div>
     <div id="challenge-6"></div>
     <div id="challenge-7"></div>
+    <div id="challenge-8"></div>
     <script src="main.js"></script>
 </body>
 </html>
