--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div id="challenge-6"></div>
     <div id="challenge-7"></div>
     <div id="challenge-8"></div>
+    <div id="challenge-9"></div>
     <script src="main.js"></script>
 </body>
 </html>
