--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
     <div id="challenge-7"></div>
     <div id="challenge-8"></div>
     <div id="challenge-9"></div>
+    <div id="challenge-10" style="text-align:center">
+        <span id="7"> 7 </span><span id="8"> 8 </span><span id="9"> 9 </span><span id="10"> 10 </span><br>
+                <span id="4"> 4 </span><span id="5"> 5 </span><span id="6"> 6 </span><br>
+                <span id="2"> 2 </span><span id="3"> 3 </span><br>
+                <span id="1"> 1 </span>
+                
+    </div>
     <script src="main.js"></script>
 </body>
 </html>
